# Snail-2.0

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
CMake/hunter-0.19.138/docs/creating-new/yed/: branches.graphml  pr-update-version.graphml  pull-request-testing.graphml  pull-request.graphml
CMake/hunter-0.19.138/docs/user-guides/yed/: cmake-hunter-environment.graphml
CMake/hunter-0.19.138/docs/yed-sources/: package-conflict-resolved.graphml  package-conflict.graphml
CMake/hunter-0.19.138/maintenance/local-upload/llvm/win/: run-win-vs-14-2015-sdk-8-1.bat
CMake/hunter-0.19.138/maintenance/local-upload/qt/win/: run-win-mingw.bat  run-win-vs-12-2013-win64.bat  run-win-vs-12-2013.bat  run-win-vs-14-2015-sdk-8-1.bat
res/: basicShader.fs  basicShader.vs  forexample-hunter-simple- Simple example of using Hunter package manager.url  nanoant-CMakePCHCompiler- CMake precompiled header support via custom PCH compiler extension.url
src/: CMakeLists.txt
src/core/: CMakeLists.txt  main.cpp  main.h
src/rendering/: CMakeLists.txt  Mesh.cpp  Mesh.h  OpenGLShader.cpp  OpenGLShader.h  RenderingWindow.h  Texture.cpp  Texture.h  Transform.hpp  Vertex.h  display.cpp  display.h
src/rendering/camera/: Camera.cpp  Camera.h
